<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--    name   -->

        <TextView
            android:id="@+id/tvDetailNameText"
            style="@style/TextInfoTitle"
            app:layout_constraintStart_toStartOf="@+id/tvDetailName"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvDetailName"
            style="@style/TextInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailNameText"
            tools:text="Name" />

        <!--    username   -->
        <TextView
            android:id="@+id/tvDetailUsernameText"
            style="@style/TextInfoTitle"
            app:layout_constraintStart_toStartOf="@+id/tvDetailName"
            app:layout_constraintTop_toBottomOf="@id/tvDetailName"
            android:text="@string/username"  />

        <TextView
            android:id="@+id/tvDetailUsername"
            style="@style/TextInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailUsernameText"
            tools:text="Username" />

        <!--    location   -->
        <TextView
            android:id="@+id/tvDetailLocationText"
            style="@style/TextInfoTitle"
            app:layout_constraintStart_toStartOf="@+id/tvDetailLocation"
            app:layout_constraintTop_toBottomOf="@id/tvDetailUsername"
            android:text="@string/location" />

        <TextView
            android:id="@+id/tvDetailLocation"
            style="@style/TextInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailLocationText"
            tools:text="Location" />

        <!--    location   -->
        <TextView
            android:id="@+id/tvDetailCompanyText"
            style="@style/TextInfoTitle"
            app:layout_constraintStart_toStartOf="@+id/tvDetailCompany"
            app:layout_constraintTop_toBottomOf="@id/tvDetailLocation"
            android:text="@string/company" />

        <TextView
            android:id="@+id/tvDetailCompany"
            style="@style/TextInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailCompanyText"
            tools:text="Company" />

        <!--    location   -->
        <TextView
            android:id="@+id/tvDetailRepoText"
            style="@style/TextInfoTitle"
            app:layout_constraintStart_toStartOf="@+id/tvDetailRepo"
            app:layout_constraintTop_toBottomOf="@id/tvDetailCompany"
            android:text="@string/repositories" />

        <TextView
            android:id="@+id/tvDetailRepo"
            style="@style/TextInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailRepoText"
            tools:text="1990 Repositories" />

        <ProgressBar
            android:id="@+id/pbDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>